# autonomous_exploration

./: README.md
devel/: .catkin
devel/lib/map_server/: map_saver  map_server  rtest
devel/lib/my_frontier_exploration/: frontier
devel/lib/my_move_base/: move_base_astar  move_base_hybri  move_base_rrt
devel/lib/pkgconfig/: map_server.pc  my_controller.pc  my_frontier_exploration.pc  my_move_base.pc  mycar.pc
devel/share/map_server/cmake/: map_serverConfig-version.cmake  map_serverConfig.cmake
devel/share/my_controller/cmake/: my_controllerConfig.cmake
devel/share/my_frontier_exploration/cmake/: my_frontier_explorationConfig.cmake
devel/share/my_move_base/cmake/: my_move_baseConfig.cmake
devel/share/mycar/cmake/: mycarConfig.cmake
src/generate_tf/: CMakeLists.txt
src/generate_tf/src/: generate_tf.cpp  vehicle.cpp
src/generate_tf/test/: sendcmd.cpp  test.cpp
src/my_controller/: CMakeLists.txt  controller_plugins.xml
src/my_controller/include/my_controller/: my_controller.h
src/my_controller/src/: example_controller.cpp  my_controller.cpp
src/my_frontier_exploration/: CMakeLists.txt  package.xml
src/my_frontier_exploration/Configuration/: config.txt
src/my_frontier_exploration/include/Config/: Config.h
src/my_frontier_exploration/include/my_frontier_exploration/: frontier_search.h  inflation_obstacle_builder.h
src/my_frontier_exploration/src/: Config.cpp  frontier_search.cpp  inflation_obstacle_builder.cpp  my_frontier_exploration.cpp
src/my_move_base/: CMakeLists.txt
src/my_move_base/Configuration/: config.txt
src/my_move_base/include/my_move_base/: A_star.h  HybricAStar.h  RRT.h  RRT_STAR.h  RTT.h  inflation_obstacle_builder.h  pid.h
src/my_move_base/src/: A_star.cpp  HybricAStar.cpp  RRT.cpp  RRT_STAR.cpp  inflation_obstacle_builder.cpp  move_base_astar.cpp  move_base_hybri.cpp  move_base_rrt.cpp  move_base_rrt_star.cpp  my_move_base_astar.cpp  my_move_base_hastar.cpp  my_move_base_rrt.cpp  my_move_base_rrtstar.cpp  pid.cpp  test_pid.cpp
src/mycar/: CMakeLists.txt  package.xml  urdf.rviz
src/mycar/building/localmin/: model.config  model.sdf
src/mycar/building/tukl/: model.config  model.sdf
src/mycar/building/youtube/: model.config  model.sdf
src/mycar/launch/tricycle/: launch_all.launch  view_gazebo_origin.launch
src/mycar/map/: halfmap.yaml  localmin.yaml  mymap.yaml
src/mycar/script/: mbot_teleop 3.py
src/mycar/src/: test.cpp
src/mycar/urdf/: materials.xacro
src/mycar/urdf/xacro_gazebo/: mcar_withlidar.xacro
src/mycar/urdf/xacro_gazebo/car/: mcar.xacro  tricycle_body.xacro  tricycle_chassis.xacro  tricycle_plugins.xacro  wheel.xacro  wheel_actuated.xacro
src/mycar/urdf/xacro_gazebo/sensors/: kinect_gazebo.xacro  lidar_gazebo.xacro
src/mycar/world/: house1.world  tukl
src/mycar/yaml/: base_local_planner_params.yaml  costmap_common_params.yaml  localal_costmap_params.yaml
